--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,9 +1,49 @@
 $url: dist/img
+body
+  font-family: Roboto
+  font-weight: 500
+  font-size: 24px
+  color: #ffffff
   
-.flex-autoprefixer
-  display: flex
-  text-decoration: underline
- 
-.box
-  background: url('/src/img/desktop-3246124__340.jpg')
-  // background: $cred
+.block
+  height: 900px
+  background: #0F8360
+  margin: 0 auto
+  h1
+    font-family: Roboto
+    font-weight: 500
+    color: #FFFFFF
+    text-align: center
+    font-size: 32px
+    padding-top: 40px
+
+  input, select
+    width: 100%
+    height: 97px
+    border: none
+    font-size: 32px
+    color: #000
+    font-family: Roboto
+    text-align: center
+    margin-bottom: 40px
+    
+  option
+    text-align: center
+  label
+    display: block
+    text-align: center
+    font-family: Roboto
+    margin-bottom: 15px    
+  .form-element 
+    margin-top: 100px 
+  button
+    width: 100%
+    height: 97px
+    background: #EAEA43
+    border: none
+    color: #fff
+.block-result
+  background: #0F8360
+  h1 
+    text-align: center
+    
